Fix disappearing tab and safari tab flicker

--- a/gamcoach-ui/src/components/coach-panel/CoachPanel.scss
+++ b/gamcoach-ui/src/components/coach-panel/CoachPanel.scss
@@ -306,6 +306,9 @@
     opacity: 0;
     transition: opacity 200ms ease-in;
 
+    -webkit-backface-visibility: hidden;
+    -webkit-transform: translateZ(0);
+
     &:global(.shown) {
       opacity: 1;
     }
